--- a/agents_and_servers/static_pages/static/index.html
+++ b/agents_and_servers/static_pages/static/index.html
@@ -1,6 +1,16 @@
 <html>
 
 <head>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+  <style>
+    form, .controls {
+       width: 100%;
+       text-align: center;
+       padding: 10px;
+       margin: 10px;
+    }
+  </style>
 
 </head>
 
@@ -8,7 +18,9 @@
 
   <form action="/api/message" method="POST">
 	<textarea name="message"></textarea>
-        <button type="submit">update</button>
+	<div class="controls">
+          <button type="submit">update</button>
+        </div>
   </form>
 
 
